--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,10 +9,10 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Powered by <a href="http://willants.com">Hux Blog</a> |
+                    Powered by <a href="http://willants.com">Willants</a> |
                     <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
                         height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true">
+                        src="https://ghbtns.com/github-btn.html?user=wyliog&repo=wyliog.github.io&type=star&count=true">
                     </iframe>
                 </p>
             </div>
